angular-example-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-example
  namespace: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: jboss/keycloak
        ports:
        - containerPort: 8080
