angular-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-example-service
  namespace: angular-example
spec:
  selector:
    app: angular-example
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80  # This is the targetPort inside the pod
      nodePort: 30001
