angular-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angular-example-ingress
  namespace: angular-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: my-angular.com  # Replace with your domain or use the IP
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular-example-service
                port:
                  number: 80
